# np-chatbot

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  main.py  pyproject.toml
np_chatbot/: events.py  faketube.py  jsonl_iterator.py  logging.py  recording_iterator.py  settings.py  types.py
np_chatbot/google/: credentials_manager.py
np_chatbot/google/chat/: chat_stream_client.py  event_iterator.py  iterator.py  reply_iterator.py  stream.py
np_chatbot/google/chat/proto/: stream_list_pb2.py  stream_list_pb2_grpc.py
np_chatbot/google/sheets/: workbook.py  workbook_iterator.py
np_chatbot/youtube/: chat_stream_client.py  client.py  iterator.py  stream.py
np_chatbot/youtube/proto/: stream_list_pb2_grpc.py
scripts/: record.py  test_chat_iterator.py  test_fake_iterator.py
