[project]
name = "np-chatbot"
version = "0.1.0"
description = "YouTube live chat bot daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["np_chatbot"]
